# cpu-power-manager

./: .gitignore  Cargo.toml  LICENSE  QUICK_START.md  README.md  build.sh  install.sh
assets/: com.cpupowermanager.policy  cpu-power-manager.desktop  cpu-power-manager.service
debian/: changelog  control
resources/: style.css
src/: app.rs  main.rs  tray.rs
src/backend/: auto_tune.rs  cpu.rs  frequency.rs  governor.rs  hwmon.rs  mod.rs  power.rs  power_supply.rs  profile.rs  thermal.rs  turbo.rs
src/config/: mod.rs
src/system/: mod.rs
src/ui/: mod.rs
src/utils/: error.rs  mod.rs
